syntax = "proto3";

package auth;

option go_package = "github.com/alexey-dobry/rental-service/internal/pkg/gen/auth";

service Auth {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Auth (AuthRequest) returns (AuthResponse);
  rpc CreateProfile (CreateProfileRequest) returns (CreateProfileResponse);
  rpc IsValid (IsValidRequest) returns (IsValidResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  string jwt_token = 1;
}

message AuthRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string jwt_token = 1;
}

message IsValidRequest {
  string jwt_token = 1;
}

message IsValidResponse {
  bool is_jwt_valid = 1;
}

message CreateProfileRequest {
  string user_id = 1;
}

message CreateProfileResponse {
  bool result = 1;
}